--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -45,8 +45,7 @@
 	pages = {i--23},
 	journaltitle = {{IEEE} Std 1471-2000},
 	year = {2000},
-	keywords = {architectural description, architecture, software-intensive system, stakeholder con-cerns, system stakeholder, view, viewpoint},
-	file = {IEEE Xplore Abstract Record:files/98/abs_all.html:text/html}
+	keywords = {architectural description, architecture, software-intensive system, stakeholder con-cerns, system stakeholder, view, viewpoint}
 }
 
 @inproceedings{may2005survey,
@@ -144,8 +143,17 @@ month={Sept}
 @article{ISO/IEC25010:2011,
 	title={ISO/IEC 25010:2011 Systems and software engineering -- Systems and software Quality Requirements and Evaluation (SQuaRE) -- System and software quality models},
 	author={ISO},
-	year={2011}
+	year={2011},
+	url={http://www.iso.org/iso/catalogue\_detail.htm?csnumber=35733}
 }
+
+@article{UML,
+	title={OMG Unified Modeling Language TM (OMG UML), version 2.5},
+	author={{Object Management Group}},
+	year={2015},
+	url={http://www.omg.org/spec/UML/2.5/PDF/}
+}
+
 
 % ylläpidettävyys
 
@@ -461,8 +469,7 @@ month={May}
 	author = {de Andrade, Hugo Sica and Almeida, Eduardo and Crnkovic, Ivica},
 	urldate = {2016-03-05},
 	year = {2014},
-	langid = {english},
-	file = {a12-de_andrade.pdf:files/17/a12-de_andrade.pdf:application/pdf}
+	langid = {english}
 }
 
 @incollection{garcia_toward_2009,
@@ -495,8 +502,7 @@ month={May}
 	publisher = {{ACM}},
 	author = {Coelho, Roberta and Kulesza, Uirá and Von Staa, Arndt},
 	urldate = {2016-02-05},
-	year = {2005},
-	file = {p114-roberta.pdf:files/56/p114-roberta.pdf:application/pdf}
+	year = {2005}
 }
 
 
@@ -507,8 +513,8 @@ month={May}
 	publisher = {{ACM}},
 	author = {Bertran, Isela Macia},
 	urldate = {2016-03-02},
-	year = {2011},
-	file = {06032597.pdf:files/121/06032597.pdf:application/pdf}
+	year = {2011}
+	
 }
 
 % pohdintaa
